# Discord-Bot-Stable-Diffusion

./: .env.example  .pre-commit-config.yaml  README.md  Stable_diffusion.ipynb  ai_group.py  bot.py  main.py  pyproject.toml  requirements.txt  run_bot.py
ai_server/: README.md  ai_app.py  requirements.txt
ai_server/models/: chatgptModel.py  mistralModel.py  model.py  stableDiffusion.py
discord_src/bot/: ai_group.py  bot.py  discord_bot.py
discord_src/config/: app_config.py  config.py  config.yaml  config.yml  config_struct.py
discord_src/utils/: config.py  utils.py
utils/: config.yml  utils.py
